--- a/03_amenagement.tex
+++ b/03_amenagement.tex
@@ -1,1 +1,321 @@
 \chapter{L'aménagement}
+
+L 300-1 \& L 300-2
+
+	\begin{quote}
+		\textbf{\articleCodifie{L}{300-1}}
+
+		<< {\itshape Les actions ou opérations d'aménagement ont pour objets de mettre en œuvre un projet urbain, une politique locale de l'habitat, d'organiser le maintien, l'extension ou l'accueil des activités économiques, de favoriser le développement des loisirs et du tourisme, de réaliser des équipements collectifs ou des locaux de recherche ou d'enseignement supérieur, de lutter contre l'insalubrité et l'habitat indigne ou dangereux, de permettre le renouvellement urbain, de sauvegarder ou de mettre en valeur le patrimoine bâti ou non bâti et les espaces naturels.}
+
+		\lips >>
+	\end{quote}
+
+	ARticle essentiel qui permet la qualification et la justification
+
+	Préemption implique ....
+
+	Très nombreux exemples tirés de la jurisprudence.
+	\begin{itemize}
+		\item création d'un pôle
+		\item
+	\end{itemize}
+
+	\begin{quote}
+		\textbf{\articleCodifie{L}{300-2}}
+
+		<< {\itshape } Les projets de travaux ou d'aménagements soumis à permis de construire ou à permis d'aménager, autres que ceux mentionnés au 3° de l'article L. 103-2, situés sur un territoire couvert par un schéma de cohérence territoriale, par un plan local d'urbanisme ou par un document d'urbanisme en tenant lieu ou par une carte communale peuvent faire l'objet de la concertation prévue à l'article L. 103-2. Celle-ci est réalisée préalablement au dépôt de la demande de permis, à l'initiative de l'autorité compétente pour statuer sur la demande de permis ou, avec l'accord de celle-ci, à l'initiative du maître d'ouvrage.>>
+	\end{quote}
+
+	Concertation (cf. l)
+
+	\articleCodifie{L}{300-4} a été introduit comme étant un mandat. Prénete peu d'intert compte tenu de la loi MOP.
+
+	L\articlesCodifies{L}{300-5} est suivants sont fondamentaux. Ils sont relatifs aux concessions d'aménagements.
+
+	Loi de 2005 vient mettre le droit français en conformité avec le droit européen relatif à la concurrence.
+
+	\begin{quote}
+		\textbf{\articleCodifie{L}{300-2}}
+
+		<< {\itshape } L'État et les collectivités territoriales, ainsi que leurs établissements publics, peuvent concéder la réalisation des opérations d'aménagement prévues par le présent code à toute personne y ayant vocation.
+
+		\medskip L'attribution des concessions d'aménagement est soumise par le concédant à une procédure de publicité permettant la présentation de plusieurs offres concurrentes, dans des conditions prévues par décret en Conseil d'Etat. \lips
+
+		\medskip Le concessionnaire assure la maîtrise d'ouvrage des travaux, bâtiments et équipements concourant à l'opération prévus dans la concession, ainsi que la réalisation des études et de toutes missions nécessaires à leur exécution. Il peut être chargé par le concédant d'acquérir des biens nécessaires à la réalisation de l'opération, y compris, le cas échéant, par la voie d'expropriation ou de préemption. Il procède à la vente, à la location ou à la concession des biens immobiliers situés à l'intérieur du périmètre de la concession.  >>
+	\end{quote}
+
+	Les opérations peuvent être faite << en régie >>, ou via des concessionnaires ou des opérateurs qui peuvent être de deux types :
+	\begin{itemize}
+		\item SEM << \emph{in house} >> ou << quasi régie >>
+		\item Société privé
+	\end{itemize}
+	Pas de concession sans mise en concurrence, à l'exception du cas des concessionnaires \emph{in house}.
+
+	Le concessionnaire assure , il en est raisonnable. Il assure en amont les étude. Et il a une mission particulière grâce à l'expro : il peut .
+
+	Le \CU organise très complètement le rôle.
+
+	\begin{itemize}
+		\item \articlesCodifiesS{R}{300-4} concession pour lesquels le risque financier prépondérant
+		\item \articlesCodifies{R}{300-11} pas de transfert de risque financier prépondérant sur la tête du concessionnaire
+	\end{itemize}
+	Second cas : subvention, prêt public, \etc Situation proche d'un marché public.
+
+	Pas de concession si pas d'équipement public.
+
+\section{Les droits de préemption et de priorité}
+
+	Vu avec Me Perinet Marquet
+
+\section{Actions et opération d'aménagement}
+
+	\subsection{Les concessions}
+
+		\paragraph{1\ier{} cas : la concession en régie.}
+
+		Intérêt si les terrains sont déjà maitrisé par la commune et qu'elle possède les compétences suffisantes lui permettant d'assumer l'execution.
+
+		Représente environ \pourcent{5} des concessions
+
+		\paragraph{2\ieme{} cas : la concession en régie.}
+
+		...
+
+		Risques techniques
+		risque commercial
+
+	\subsection{Les PPA et les GOU}
+
+\section{Les Zones d'aménagement concerté (ZAC)}
+
+	Déroulé chronologique :
+
+	Pas de ZC si pas de nécessite de réaliser des équipements publics.
+	Concertation. La commune n'est pas lié par la concertation.
+
+	3 solutions :
+	\begin{itemize}
+		\item pas plus loin
+		\item
+		\item
+	\end{itemize}
+
+	C'est l'approbation du dossier de création de la ZAC a
+	\begin{enumerate}
+		\item Plan d'emprise
+		\item
+		\item Option fiscale : le plus souvent participation ... et plus la TA
+		\item PGC prévisionnel
+		\item l'étude d'impact document très volumineux
+	\end{enumerate}
+
+	Création de la ZAC, effets juridiques :
+	\begin{enumerate}
+		\item changement de mode de financement
+		\item droit de préemption ou d'expropriation peut s'appliquer dans tous le périmètre de la ZAC
+		\item possibilité de mettre en demeure la collectivité locale concédante d'acquérir (droit de délaissement)
+		\item plus de nécessité d'autorisation administrative préalable pour les découpages fonciers pour l'aménageur
+	\end{enumerate}
+
+	\subsection{Principes généraux}
+
+		\subsubsection{Autonomie relative avec le PLU}
+
+		Il y avait avec la loi SRU, tout lien a été rompu. depuis 2000
+		Deux exceptions
+		\begin{itemize}
+			\item les principales localisation ans un PLU peut apparaitre
+			\item depuis la loi ELAN, approbation d'un OAP peut valoir création de ZC
+		\end{itemize}
+
+		\subsubsection{Successions d'acte}
+
+	\subsection{Concertation préalables et bilan}
+
+	\subsection{Dossier de création}
+
+		\subsubsection{Mode de réalisation}
+
+		\subsubsection{Option fiscale}
+
+			\paragraph{Participation}
+
+			\paragraph{Taxe d'aménagement}
+
+		\subsubsection{Étude d'impact}
+
+			Fondement 1976. N'a jamais cessé d'augmenter quant à son contenu.
+
+			Critique régulière de l'insuffisance des études d'impact. Raison de l'annulation de la ZAC du << Triangle de Gonesse >>
+
+	\subsection{Désignation de l'aménageur}
+
+		introduit par la loi de 2005
+
+		Phase très chronophage : 3 à 4 mois
+
+		Délibération qui lance la consultation
+
+		Publicité
+
+		Réponse
+
+		Critères non exclusifs :
+		\begin{enumerate}
+			\item suffisance financière
+			\item expertise technique
+		\end{enumerate}
+		et
+		\begin{enumerate}
+			\item meilleure maitrise foncière, abandonné depuis
+			\item emploi local
+		\end{enumerate}
+
+		Contestation possible par référé pré-contractuel. \lips
+
+		\subsubsection{Fin de la désignation discrétionnaire de l'aménageur}
+
+		\subsubsection{Consultation obligatoire : lois de juillet 2005 et 2009}
+
+		\subsubsection{Ordonnance de janvier 2016 sur les concessions d'aménagement}
+
+	\subsection{Dossier de réalisation}
+
+		\begin{enumerate}
+			\item Programme d'équipement public
+			\item Modalités prévisionnelles de financement
+			\item Programme des équipements publics
+		\end{enumerate}
+		
+		\begin{quote}
+			\articleCU{R}{311-7}
+			<< {\itshape La personne publique qui a pris l'initiative de la création de la zone constitue un dossier de réalisation approuvé, sauf lorsqu'il s'agit de l'État, par son organe délibérant. Le dossier de réalisation comprend :
+				
+				a) Le projet de programme des équipements publics à réaliser dans la zone ; lorsque celui-ci comporte des équipements dont la maîtrise d'ouvrage et le financement incombent normalement à d'autres collectivités ou établissements publics, le dossier doit comprendre les pièces faisant état de l'accord de ces personnes publiques sur le principe de la réalisation de ces équipements, les modalités de leur incorporation dans leur patrimoine et, le cas échéant, sur leur participation au financement ;
+				
+				\lips
+				
+%				b) Le projet de programme global des constructions à réaliser dans la zone ;
+%				
+%				c) Les modalités prévisionnelles de financement de l'opération d'aménagement, échelonnées dans le temps.
+%				
+%				Le dossier de réalisation complète en tant que de besoin le contenu de l'étude d'impact mentionnée à l'article R. 311-2 ou le cas échéant la ou les parties de l'évaluation environnementale du plan local d'urbanisme portant sur le projet de zone d'aménagement concerté, conformément au III de l'article L. 122-1-1 du code de l'environnement notamment en ce qui concerne les éléments qui ne pouvaient être connus au moment de la constitution du dossier de création.
+%				
+%				L'étude d'impact mentionnée à l'article R. 311-2 ou le cas échéant la ou les parties de l'évaluation environnementale du plan local d'urbanisme portant sur le projet de zone d'aménagement concerté ainsi que les compléments éventuels prévus à l'alinéa précédent sont joints au dossier de toute enquête publique ou de toute mise à disposition du public concernant l'opération d'aménagement réalisée dans la zone.
+			} >>
+		\end{quote}
+		
+		Il ne peut être mis à la charge de l'aménageur ... 
+		
+		Ce tableau peut vivre, mais à chaque fois il y a nécessité de modifier le dossier. Il y a donc nouvelle délibération pour entériner le dossier modifié.
+		
+		
+		
+		\subsubsection{Modalités prévisionnelles de financement}
+		
+			Le deuxième tableau renvoie aux modalités de financement.
+			
+			La quasi totalité des recettes proviennent de la vente.
+			
+			Les charges sont constituées :
+			\begin{itemize}
+				\item en premier lieu par les acquisitions foncières.
+				Les aménageurs utilisent souvent la technique de << l'escargot >>, consistant à acquérir et commercialiser les terrains l'un après l'autre,de manière à éviter d'acheter beaucoup de terrains.
+				
+				\item Les coût de réalisation des équipements publics.
+				
+				\item La viabilisation des terrains
+				
+				\item Garanties financières
+				
+				\item Frais de structure
+				
+				\item Frais commerciaux.
+				
+				\item Frais divers. Y compris le contentieux.
+			\end{itemize}
+		
+		\begin{quote}
+			\articleCU{L}{311-4}
+			<< \lips
+			
+			{\itshape Lorsqu'une construction est édifiée sur un terrain n'ayant pas fait l'objet d'une cession, location ou concession d'usage consentie par l'aménageur de la zone, une convention conclue entre la commune ou l'établissement public de coopération intercommunale compétent pour créer la zone d'aménagement concerté et le constructeur, signée par l'aménageur, précise les conditions dans lesquelles le constructeur participe au coût d'équipement de la zone. La convention constitue une pièce obligatoire du dossier de permis de construire ou de lotir.
+				
+				\medskip La participation aux coûts d'équipement de la zone peut être versée directement à l'aménageur ou à la personne publique qui a pris l'initiative de la création de la zone si la convention conclue avec le constructeur le prévoit.}
+			
+			\lips >>
+		\end{quote}
+		Que ce soit le propriétaire ou le constructeur qui va valoriser le terrain, qui doit mettre en place une convention de participation avec la ville.
+		
+		Il n'y a pas de quantum imposé. La pratique est de faire une règle de 3 le ... rapporté au coûts des équipements publics.
+		
+		Convention avec la collectivité locale, il faut donc une délibération du CM habilitant le signataire.
+		
+		Elle contient le montant, l'échéancier de paiement. 
+		
+
+		\subsubsection{Programme d'équipement public}
+
+		\subsubsection{Programme global de construction}
+
+	\subsection{Commercialisation des terrains par l'aménageur}
+		
+		\begin{quote}
+			\textbf{\articleCU{L}{311-4}} :
+			<< 
+			{\itshape Les cessions ou concessions d'usage de terrains à l'intérieur des zones d'aménagement concerté font l'objet d'un cahier des charges qui indique le nombre de mètres carrés de surface de plancher dont la construction est autorisée sur la parcelle cédée. Le cahier des charges peut en outre fixer des prescriptions techniques, urbanistiques et architecturales imposées pour la durée de la réalisation de la zone.
+				
+			\medskip Le maire ou le président de l'établissement public de coopération intercommunale, dans les cas où la création de la zone relève de la compétence du conseil municipal ou de l'organe délibérant de l'établissement public de coopération intercommunale, ou le représentant de l'Etat dans le département dans les autres cas, peut approuver le cahier des charges. Si le cahier des charges a été approuvé, et après qu'il a fait l'objet de mesures de publicité définies par décret, celles de ses dispositions qui sont mentionnées au premier alinéa sont opposables aux demandes d'autorisation d'urbanisme.
+			
+			\medskip Le cahier des charges devient caduc à la date de la suppression de la zone. Les dispositions du présent alinéa ne sont pas applicables aux cahiers des charges signés avant l'entrée en vigueur de la loi \no 2000-1208 du 13 décembre 2000 relative à la solidarité et au renouvellement urbains.} >>
+		\end{quote}
+		
+		Il faut en retenir qu'il y a deux cahiers des charges possibles :
+		\begin{itemize}
+			\item le premier, obligatoire, indique l'enveloppe de constructibilité cédée en terme de \sdp et ne constitue pas réellement un cahier des charges ;
+			\item le second, facultatif, permet de préciser tout ce qui n'est pas prévu à l'article 11 du PLU, les prescriptions techniques, urbanistiques et architecturales.
+		\end{itemize}
+	
+	On peut imaginer qu'il y ait des clauses qui sont étrangères à la question urbaines, mais dans ce cas elles n'ont d'effet que contractucel. Mais le cahier des charges ne peut être contraire au PLU. Il peut être plus contraignant, mais pas contraire. dans ce cas, le PLU prime.
+	
+	\paragraph{Modalité de validation} Relativement simple. Dans la majorité des cas un arrêté municipal approuve le cahier des charges. Pas de nécessité de passer en \CM
+	
+	\paragraph{Effet juridique} Double effet : contractuel et réglementaire.
+	
+	\begin{enumerate}
+		\item \textbf{Effet contractuel.} La question se pose pour le primo acquéreur. Elle se pose également pour les acquéreurs successifs. On peut se 
+	
+		Si la ZAC est supprimée, la question ne se pose plus (enfin plutôt).
+		
+		Peu de jurisprudence.
+		
+		\item \textbf{effet réglementaire} Mêmes effets que les prescriptions d'un PLU. L'organisme instructeur doit exercer un double contrôle : d'une part le PLU, d'autre part le cahier des charges.
+	\end{enumerate}
+	
+	
+
+		\subsubsection{Cahier des charges obligatoire}
+		
+		Nullité relative en cas d'abscence
+
+		\subsubsection{Surface de plancher par parcelle}
+
+		\subsubsection{Cahier des charges facultatifs}
+
+		\subsubsection{Prescription techniques et architecturales}
+
+Suppression de ZAc
+
+\begin{quote}
+	\textbf{\articleCU{L}{311-412}} :
+	<< 
+	{\itshape La suppression d'une zone d'aménagement concerté est prononcée, sur proposition ou après avis de la personne publique qui pris l'initiative de sa création, par l'autorité compétente, en application de l'article L. 311-1, pour créer la zone. La proposition comprend un rapport de présentation qui expose les motifs de la suppression.
+		
+	\medskip La modification d'une zone d'aménagement concerté est prononcée dans les formes prescrites pour la création de la zone.
+	
+	\medskip La décision qui supprime la zone ou qui modifie son acte de création fait l'objet des mesures de publicité et d'information édictées par l'article R. 311-5.} >>
+\end{quote}
+
+Une modification substantielle, tant sur les aspects programmatiques ou financiers \lips
+
+Lorsque la ZAC est achevée, soit car le programme des équipements publics est achevé ou l'ensemble des lots cédés, ou les deux ensembles (idéalement).
