--- a/04_fiscalite.tex
+++ b/04_fiscalite.tex
@@ -1,1 +1,181 @@
 \chapter{Fiscalité de l'urbanisme}
+
+Deux propos :
+\begin{itemize}
+	\item On parle tout d'abord de paticpation d'urba, \cad de qui assujettissent
+	
+	le droit commun est articulé en trois 
+	l\begin{enumerate}
+		\item 'outil par défaut la taxe d'aménagment qui est venu remplacer la Taxe Local d'Équipement ;
+		\item qui peut être écarté, pour ce qui est de la part communale de la T,  par la ZAC et le régime de participation ;
+		\item ou être écarté dans les mêmes dans le cadre d'un \PUP
+	\end{enumerate}
+
+	\item il n'y pas d'autres , et donc de possibilité pour une \commune de demander une taxe qui ne trouverait pas dans l'\articleCU{L}{332-6}
+	\begin{quote}
+		<< {Les bénéficiaires d'autorisations de construire ne peuvent être tenus que des obligations suivantes :
+			
+			1° Le versement de la taxe d'aménagement prévue par l'article L. 331-1 ou de la participation instituée dans les secteurs d'aménagement définis à l'article L. 332-9 dans sa rédaction antérieure à l'entrée en vigueur de la loi n° 2010-1658 du 29 décembre 2010 de finances rectificative pour 2010 ou dans les périmètres fixés par les conventions visées à l'article L. 332-11-3 ;
+			
+			2° Le versement des contributions aux dépenses d'équipements publics mentionnées au c du 2° de l'article L. 332-6-1, \lips 
+			
+			3° La réalisation des équipements propres mentionnées à l'article L. 332-15 ;
+			
+			4° Le versement pour sous-densité prévu aux articles L. 331-36 et L. 331-38 ;
+			
+			5° Le versement de la redevance d'archéologie préventive prévue aux articles L. 524-2 à L. 524-13 du code du patrimoine.} >>
+	\end{quote}
+\end{itemize}
+
+\section{Taxe d'aménagement}
+
+	\begin{quote}
+		\articleCU{L}{331-6}
+		
+		<< {\itshape Les opérations d'aménagement et les opérations de construction, de reconstruction et d'agrandissement des bâtiments, installations ou aménagements de toute nature soumises à un régime d'autorisation en vertu du présent code donnent lieu au paiement d'une taxe d'aménagement, sous réserve des dispositions des articles L. 331-7 à L. 331-9.
+			
+		Les redevables de la taxe sont les personnes bénéficiaires des autorisations mentionnées au premier alinéa du présent article ou, en cas de construction sans autorisation ou en infraction aux obligations résultant de l'autorisation de construire ou d'aménager, les personnes responsables de la construction.
+		
+		Le fait générateur de la taxe est, selon les cas, la date de délivrance de l'autorisation de construire ou d'aménager, celle de délivrance du permis modificatif, celle de la naissance d'une autorisation tacite de construire ou d'aménager, celle de la décision de non-opposition à une déclaration préalable ou, en cas de constructions ou d'aménagements sans autorisation ou en infraction aux obligations résultant de l'autorisation de construire ou d'aménager, celle du procès-verbal constatant l'achèvement des constructions ou des aménagements en cause.} >>
+	\end{quote}
+
+	\paragraph{Champ d'application} Elle s'applique pour les ...
+	
+	\paragraph{Redevable} : personne 
+	
+	\paragraph{Fait générateur} ... 
+	
+	L'idée est que la taxe est due si ... En cas de retrait du permis pour cause de fraude, les sommes déjà versée par le titulaire lui sont dues.
+	Le retrait à tout moment à la demande du titulaire ... remboursement 
+	Permis annulée : remboursement
+	PCM ...
+	
+	Transfert de permis. Encore une fois plusieurs cas possibles...
+	
+	\paragraph{Base imposable }
+	
+	\begin{quote}
+		\textbf{\articleCU{L}{331-10}}
+		
+		<< {\itshape L'assiette de la taxe d'aménagement est constituée par :
+			
+			1° La valeur, déterminée forfaitairement par mètre carré, de la surface de la construction ;
+			
+			2° La valeur des aménagements et installations, déterminée forfaitairement dans les conditions prévues à l'article L. 331-13.
+			
+			La surface de la construction mentionnée au 1° s'entend de la somme des surfaces de plancher closes et couvertes, sous une hauteur de plafond supérieure à 1,80 mètre, calculée à partir du nu intérieur des façades du bâtiment, déduction faite des vides et des trémies.} >>
+	\end{quote}
+	On voit que  la bas de la TA n'est pas la SDP
+	
+	\subsection{Objectifs de participation de droit commun}
+	
+	\subsection{Les trois parts de la TA et détermination de l'assiette}
+	
+	\subsection{Exonération et mise en recouvrement}
+	
+\section{Convention de Projet Urbain Partenarial}
+
+	Descendant du Programme d’Aménagement d’Ensemble (PAE)
+	
+	Le projet urbain partenarial (PUP) permet aux communes, aux établissements publics, au représentant de l’État dans le cadre d’opérations d’intérêt national (OIN) ou à certaines collectivités territoriales ou établissements publics (article L. 312-3) dans le périmètre d'une grande opération d'urbanisme, d’assurer le préfinancement d’équipements publics par des personnes privées (propriétaires fonciers, aménageurs ou constructeurs) via la conclusion d’une convention.
+	
+	L’initiative de cette convention appartient à la collectivité compétente en matière d’urbanisme ou aux porteurs de projet (aux propriétaires fonciers, constructeurs ou aménageurs) qui la proposent si leur projet nécessite la réalisation d’équipements publics difficiles à financer par la seule taxe d’aménagement (TA).
+	
+	Depuis le marquage au sol quelques milliers d'euros, jusq'à des presques ZAC
+	
+	\begin{quote}
+		\textbf{\articleCU{L}{332-11-3}}
+		
+		<< {\itshape I.-\textbf{Dans les zones urbaines et les zones à urbaniser délimitées par les plans locaux d'urbanisme ou les documents d'urbanisme en tenant lieu}, lorsqu'une ou plusieurs opérations d'aménagement ou de construction nécessitent la réalisation d'équipements autres que les équipements propres mentionnés à l'article L. 332-15, une convention de projet urbain partenarial prévoyant la prise en charge financière de tout ou partie de ces équipements peut être conclue entre les propriétaires des terrains, les aménageurs, les constructeurs et :
+			
+		1° Dans le périmètre d'une opération d'intérêt national au sens de l'article L. 102-12, le représentant de l'Etat ;
+		
+		2° Dans le périmètre d'une grande opération d'urbanisme au sens de l'article L. 312-3, la collectivité territoriale ou l'établissement public cocontractant mentionné au même article L. 312-3 ;
+		
+		3° Dans les autres cas, la commune ou l'établissement public compétent en matière de plan local d'urbanisme.
+		
+		II.-Lorsque des équipements publics ayant vocation à faire l'objet d'une première convention de projet urbain partenarial desservent des terrains autres que ceux mentionnés dans le projet de ladite convention, par décision de leur organe délibérant, la commune ou l'établissement public compétent en matière de plan local d'urbanisme, ou la collectivité territoriale ou l'établissement public cocontractant mentionné à l'article L. 312-3 dans le périmètre des grandes opérations d'urbanisme ou le représentant de l'Etat par arrêté, dans le cadre des opérations d'intérêt national, fixe les modalités de partage des coûts des équipements et délimite un périmètre à l'intérieur duquel les propriétaires fonciers, les aménageurs ou les constructeurs qui s'y livrent à des opérations d'aménagement ou de construction participent, dans le cadre de conventions, à la prise en charge de ces mêmes équipements publics, qu'ils soient encore à réaliser ou déjà réalisés, dès lors qu'ils répondent aux besoins des futurs habitants ou usagers de leurs opérations. Les conventions successivement établies peuvent viser des programmes d'équipements publics différents lorsque les opérations de construction attendues dans chaque périmètre de convention ne nécessitent pas les mêmes besoins en équipements.
+		
+		Le périmètre est délimité par délibération du conseil municipal ou de l'organe délibérant de l'établissement public ou, dans le cadre des opérations d'intérêt national, par arrêté préfectoral, pour une durée maximale de quinze ans. Le périmètre est délimité par décision de l'organe délibérant de la collectivité territoriale ou de l'établissement public cocontractant mentionné au même article L. 312-3 dans le périmètre des grandes opérations d'urbanisme, pour une durée pouvant être supérieure à quinze ans sans pour autant pouvoir excéder la durée fixée par l'acte décidant de la qualification de grande opération d'urbanisme.
+		
+		III.-Avant la conclusion de la convention, les personnes ayant qualité pour déposer une demande de permis de construire ou d'aménager peuvent demander à la commune ou à l'établissement public de coopération intercommunale compétent en matière de plan local d'urbanisme ou à la collectivité territoriale ou l'établissement public mentionné audit article L. 312-3 dans le périmètre des grandes opérations d'urbanisme ou au représentant de l'Etat dans le cadre des opérations d'intérêt national qu'ils étudient le projet d'aménagement ou de construction et que ce projet fasse l'objet d'un débat au sein de l'organe délibérant. L'autorité compétente peut faire droit à cette demande.
+		
+		La demande est assortie d'un dossier comportant la délimitation du périmètre du projet d'aménagement ou de construction, la définition du projet ainsi que la liste des équipements publics à réaliser pour répondre aux besoins des futurs habitants ou usagers des constructions à édifier dans le périmètre.
+		
+		Cette convention ne peut mettre à la charge des propriétaires fonciers, des aménageurs ou des constructeurs que le coût des équipements publics à réaliser pour répondre aux besoins des futurs habitants ou usagers des constructions à édifier dans le périmètre fixé par la convention ou, lorsque la capacité des équipements programmés excède ces besoins, la fraction du coût prod'portionnelle à ceux-ci.
+		
+		La convention fixe les délais de paiement. La participation peut être acquittée sous forme de contribution financière ou d'apports de terrains bâtis ou non bâtis.
+		
+		La convention peut prévoir que la contribution financière prévue à l'avant-dernier alinéa du présent III est versée directement à la personne publique assurant la maîtrise d'ouvrage des équipements publics mentionnés au troisième alinéa du présent III.} >>
+	\end{quote}
+	
+	carte communale n'est pas un document tenant lieu de PLU. Donc toute le monde sauf RNU et CC.
+	
+	La convention de PUP ne peut être signée que dans les communes dotées d’un plan local d’urbanisme (PLU) ou d’un document en tenant lieu tel qu’un plan d’occupation des sols (POS) ou un plan de sauvegarde et de mise en valeur d'un secteur sauvegardé (PSMV). Dans ces communes, la convention PUP ne peut être signée que dans les zones urbaines ou les zones à urbaniser \cad les zones U et AU des PLU et U et NA des POS.
+	
+	Il faut comprendre comme << lotissement >>
+	
+	Deux types de \PUP : \begin{itemize}
+		\item avec une délib., hypothèse de définition de périmètre et validation de la convention
+		\item avec deux délib., hypothèse en deux temps
+	\end{itemize}
+
+	\subsection{Objectifs et partis à la convention}
+	
+		La convention fixe toutes les modalités de participation au financement des équipements publics, notamment les montants, et les délais de paiement.
+		
+		Doivent y figurer :
+		\begin{itemize}
+			\item la liste des équipements à financer, leur coût provisionnel et les délais de réalisation ;
+			\item le montant de la participation à la charge du constructeur ou aménageur ;
+			\item le périmètre de la convention (qui correspond aux terrains d’assiette de l’opération d’aménagement et de construction et non aux seuls équipements publics à réaliser) ;
+			\item les modalités et délais de paiement. La participation peut prendre la forme d’une contribution financière ou d’un apport de terrain bâti ou non bâti ;
+			\item la durée d’exonération de la part communale de la taxe d’aménagement, qui ne pourra pas excéder dix ans.
+		\end{itemize}
+		
+		Le quantum est librement défini, sous réserve de proportionnalité, et l'échéancier de versement sera librement convenu entre 
+		
+		\paragraph{Partis à la convention} Les parties à la convention de PUP peuvent être
+		exclusivement :
+		\begin{itemize}
+			\item le représentant de la \commune compétente en matière de PLU,
+				\footnote{Ou le représentant de l’État pour les conventions à établir dans le cadre d’une opération
+				d’intérêt national. Dans ce  cas de figure, la convention peut être tripartite si la commune doit réaliser certains équipements} ;
+				
+			\item les porteurs de projets, privés ou publics
+				(aménageurs, lotisseurs, propriétaires fonciers
+				ou constructeurs) qui projettent de déposer, à
+				terme, une demande d’autorisation d’occuper
+				le sol sur une assiette foncière qu’ils maîtrisent.
+			
+			Ces personnes peuvent se présenter en indivision. Les textes ne font pas de distinction entre
+			la nature publique ou privée des personnes
+			concernées. Il suffit que leurs projets soient
+			consommateurs du programme des équipements à financer. 
+		\end{itemize}
+	
+	\subsection{Équipement public de la PUP}
+	
+		Ils sont totalement libres : infrastructure ou superstructure
+		
+		Les équipements publics financés par les constructeurs sont ceux qui, non seulement sont rendus nécessaires par les opérations de construction ou d’aménagement initiées par ces derniers, mais répondent aussi aux besoins des futurs habitants ou usagers du projet.
+	
+	\subsection{Modalité de contribution}
+	
+\section{Participations de ZAC et convention de participation}
+	
+	La ZAC se conduit selon deux phases : une phase de création et une phase de réalisation (cf ).
+	
+	La participation pour le financement de ses équipements doit respecter un principe général : la participation de l’aménageur doit être proportionnelle et nécessaire aux besoins de l’opération.
+	
+	La répartition des coûts et la responsabilité en matière de maîtrise d’ouvrage est fixée dans la convention signée entre les acteurs impliqués dans la réalisation de la ZAC. La participation est inscrite dans le bilan financier de l’opération.
+	
+	En ZAC, la participation est perçue par l’aménageur au titre de la charge foncière puisqu’il a vocation à céder, louer ou concéder l’assiette foncière des terrains qu’ils maîtrisent.
+	
+	Pour les terrains non maîtrisés par l’aménageur ou qu’il n’a pas vendu ou cédé une convention de participation doit être conclue entre le constructeur et le lotisseur et la commune pour préciser les conditions dans laquelle ces derniers participent aux coûts d’équipement de la zone.
+	
+	Cette convention constitue une pièce obligatoire du permis de construire ou d’aménager.
+	
+	L’aménageur peut également, dans le cadre de sa négociation avec les propriétaires de terrains situés dans la ZAC, établir avec eux une convention foncière définissant les conditions dans lesquelles ils participent à l’aménagement (emprise foncière, cession de terrains, établissement de servitudes, ouverture à l’urbanisation, etc). Cette convention est distincte de la convention de participation financière prévue ci-dessus.
+
+\section{Taxes particulières}
