--- a/05_permisConstruire.tex
+++ b/05_permisConstruire.tex
@@ -1,1 +1,41 @@
 \chapter{Permis de construire}
+
+\section{Caractères généraux}
+
+\section{Contenu du dossier de demande et pièces complémentaires}
+
+\section{Déroulement et incidents dans la phase d'instruction}
+
+\section{Résultats de l'instruction}
+
+\section{Les différents type de permis de construire}
+
+	\subsection{PC et PCM}
+	
+	\subsection{PC rectificatif}
+	
+	\subsection{PC de régularisation}
+	
+	\subsection{PC valant division (article R.~431-24)}
+	
+	\subsection{PC précaire}
+	
+\section{Transfert de PC}
+
+	\subsection{Transfert de droit commun et total}
+	
+	\subsection{Transfert partiel}
+	
+\section{Prorogation du PC}
+	
+	\subsection{Prorogation sans démarrage du chantier}
+	
+	\subsection{Prorogation du fait des travaux engagés}
+	
+\section{Retrait du PC}
+	
+	\subsection{Principe et modalités du retrait}
+	
+	\subsection{Retrait à tout moment dans l'hypothèse d'un PC obtenu grâce à des manœuvres commises par le pétitionnaire}
+	
+\section{Le régime de la conformité administrative (totale ou partielle)}
