--- a/06_lotissement.tex
+++ b/06_lotissement.tex
@@ -1,1 +1,9 @@
-\chapter{Lotissements : déclaration préalable et permis d'aménager}
+\chapter[Lotissements]{Lotissements : déclaration préalable et permis d'aménager}
+
+
+\section{Les différents modes de division foncières (hors lotissement)}
+
+
+\section{Contenu et effets des déclarations préalables et permis d'aménager}
+	
+	
