--- a/07_contentieux.tex
+++ b/07_contentieux.tex
@@ -1,1 +1,31 @@
-\chapter{Les contentieux de l'urbanisme et de l'aménagement}
+\chapter[Contentieux]{Les contentieux de l'urbanisme et de l'aménagement}
+
+\section{Situations litigieuses : contentieux ou protocole transactionnel ?}
+
+\section{Les contentieux administratifs}
+
+	\subsection{Le contentieux de la légalité}
+		
+		\subsubsection{Gestion de l'affichage et des délais}
+		
+		\subsubsection{Les moyens de recevabilité des actions des requérants}
+		
+		\subsubsection{Moyens juridiques}
+		
+		\subsubsection{Pratique du référé-suspension}
+		
+		\subsubsection{Pratique de l'annulation partielle et de la régularisation}
+		
+	\subsection{Le contentieux indemnitaire}
+	
+		\subsubsection{Les 3 fondements de la responsabilité}
+		
+		\subsubsection{Les différents préjudices indemnisables}
+		
+		\subsubsection{Les causes exonératoires}
+		
+		\subsubsection{Le processus de mise en œuvre de la responsabilité de l'Administration}
+		
+\section{Le contentieux pénal}
+
+\section{Le contentieux civil}
